stopped image stretch on individual route pages

--- a/public/stylesheets/route.css
+++ b/public/stylesheets/route.css
@@ -298,9 +298,10 @@ border-radius: 10px;
 }
 
 #img {
-  width: 600px;
-  height: 340px;
+  max-width: 600px;
+  max-height: 340px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+  object-fit: contain;
 }
 
 .edit-submit-btn {
